force-app/main/default/objects/Client__c/fields/client_atsi_status__c.field-meta.xml
<CustomField>
    <fullName>client_atsi_status__c</fullName>
    <label>Aboriginal and Torres Strait Islander St</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Aboriginal but not Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>2:	Torres Strait Islander but not Aboriginal origin</fullName>
            </value>
            <value>
                <fullName>3:	Both Aboriginal and Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>4:	Neither Aboriginal or Torres Strait Islander origin</fullName>
            </value>
            <value>
                <fullName>9:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>