force-app/main/default/objects/Client__c/fields/Client_Gender__c.field-meta.xml
<CustomField>
    <fullName>Client_Gender__c</fullName>
    <label>Client_Gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	Not stated/Inadequately described</fullName>
            </value>
            <value>
                <fullName>1:	Male</fullName>
            </value>
            <value>
                <fullName>2:	Female</fullName>
            </value>
            <value>
                <fullName>3:	Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>