force-app/main/default/objects/Client__c/fields/Client_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Key__c</fullName>
    <description>This is a number or code assigned to each individual client referred to the commissioned organisation. The client identifier must be unique and stable for each individual within the Provider Organisation. Assigned by either the PHN or Provider Organisation depending on local procedures.</description>
    <label>Client Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>