force-app/main/default/objects/Client__c/fields/Client_Tags__c.field-meta.xml
<CustomField>
    <fullName>Client_Tags__c</fullName>
    <description>List of tags for the client.</description>
    <label>Client Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>