force-app/main/default/objects/Client__c/fields/Country_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Birth__c</fullName>
    <label>Country Of Birth</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1101:	Australia</fullName>
            </value>
            <value>
                <fullName>1102:	Norfolk Island</fullName>
            </value>
            <value>
                <fullName>1199:	Australian External Territories, nec</fullName>
            </value>
            <value>
                <fullName>1201:	New Zealand</fullName>
            </value>
            <value>
                <fullName>1301:	New Caledonia</fullName>
            </value>
            <value>
                <fullName>1302:	Papua New Guinea</fullName>
            </value>
            <value>
                <fullName>1303:	Solomon Islands</fullName>
            </value>
            <value>
                <fullName>1304:	Vanuatu</fullName>
            </value>
            <value>
                <fullName>1401:	Guam</fullName>
            </value>
            <value>
                <fullName>1402:	Kiribati</fullName>
            </value>
            <value>
                <fullName>1403:	Marshall Islands</fullName>
            </value>
            <value>
                <fullName>1404:	Micronesia, Federated States of</fullName>
            </value>
            <value>
                <fullName>1405:	Nauru</fullName>
            </value>
            <value>
                <fullName>1406:	Northern Mariana Islands</fullName>
            </value>
            <value>
                <fullName>1407:	Palau</fullName>
            </value>
            <value>
                <fullName>1501:	Cook Islands</fullName>
            </value>
            <value>
                <fullName>1502:	Fiji</fullName>
            </value>
            <value>
                <fullName>1503:	French Polynesia</fullName>
            </value>
            <value>
                <fullName>1504:	Niue</fullName>
            </value>
            <value>
                <fullName>1505:	Samoa</fullName>
            </value>
            <value>
                <fullName>1506:	Samoa, American</fullName>
            </value>
            <value>
                <fullName>1507:	Tokelau</fullName>
            </value>
            <value>
                <fullName>1508:	Tonga</fullName>
            </value>
            <value>
                <fullName>1511:	Tuvalu</fullName>
            </value>
            <value>
                <fullName>1512:	Wallis and Futuna</fullName>
            </value>
            <value>
                <fullName>1513:	Pitcairn Islands</fullName>
            </value>
            <value>
                <fullName>1599:	Polynesia (excludes Hawaii), nec</fullName>
            </value>
            <value>
                <fullName>1601:	Adelie Land (France)</fullName>
            </value>
            <value>
                <fullName>1602:	Argentinian Antarctic Territory</fullName>
            </value>
            <value>
                <fullName>1603:	Australian Antarctic Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>