force-app/main/default/objects/Client__c/fields/Est_Date_of_Birth_Flag__c.field-meta.xml
<CustomField>
    <fullName>Est_Date_of_Birth_Flag__c</fullName>
    <label>Estimated Date of Birth Flag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Date of birth is accurate</fullName>
            </value>
            <value>
                <fullName>2:	Date of birth is an estimate</fullName>
            </value>
            <value>
                <fullName>8:	Date of birth is a ‘dummy’ date (ie, 09099999)</fullName>
            </value>
            <value>
                <fullName>9:	Accuracy of stated date of birth is not know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>