force-app/main/default/objects/Client__c/fields/main_lang_at_home__c.field-meta.xml
<CustomField>
    <fullName>main_lang_at_home__c</fullName>
    <label>Main Language Spoken at Home</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1101:	Gaelic (Scotland)</fullName>
            </value>
            <value>
                <fullName>1102:	Irish</fullName>
            </value>
            <value>
                <fullName>1103:	Welsh</fullName>
            </value>
            <value>
                <fullName>1199:	Celtic, nec</fullName>
            </value>
            <value>
                <fullName>1201:	English</fullName>
            </value>
            <value>
                <fullName>1301:	German</fullName>
            </value>
            <value>
                <fullName>1302:	Letzeburgish</fullName>
            </value>
            <value>
                <fullName>1303:	Yiddish</fullName>
            </value>
            <value>
                <fullName>1401:	Dutch</fullName>
            </value>
            <value>
                <fullName>1402:	Frisian</fullName>
            </value>
            <value>
                <fullName>1403:	Afrikaans</fullName>
            </value>
            <value>
                <fullName>1501:	Danish</fullName>
            </value>
            <value>
                <fullName>1502:	Icelandic</fullName>
            </value>
            <value>
                <fullName>1503:	Norwegian</fullName>
            </value>
            <value>
                <fullName>1504:	Swedish</fullName>
            </value>
            <value>
                <fullName>1599:	Scandinavian, nec</fullName>
            </value>
            <value>
                <fullName>1601:	Estonian</fullName>
            </value>
            <value>
                <fullName>1602:	Finnish</fullName>
            </value>
            <value>
                <fullName>1699:	Finnish and Related Languages, nec</fullName>
            </value>
            <value>
                <fullName>2101:	French</fullName>
            </value>
            <value>
                <fullName>2201:	Greek</fullName>
            </value>
            <value>
                <fullName>2301:	Catalan</fullName>
            </value>
            <value>
                <fullName>2302:	Portuguese</fullName>
            </value>
            <value>
                <fullName>2303:	Spanish</fullName>
            </value>
            <value>
                <fullName>2399:	Iberian Romance, nec</fullName>
            </value>
            <value>
                <fullName>2401:	Italian</fullName>
            </value>
            <value>
                <fullName>2501:	Maltese</fullName>
            </value>
            <value>
                <fullName>2901:	Basque</fullName>
            </value>
            <value>
                <fullName>2902:	Latin</fullName>
            </value>
            <value>
                <fullName>2999:	Other Southern European Languages, nec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>