force-app/main/default/objects/Client__c/fields/prof_english__c.field-meta.xml
<CustomField>
    <fullName>prof_english__c</fullName>
    <label>Proficiency in Spoken English</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	Not applicable (persons under 5 years of age or who speak only English)</fullName>
            </value>
            <value>
                <fullName>1:	Very well</fullName>
            </value>
            <value>
                <fullName>2:	Well</fullName>
            </value>
            <value>
                <fullName>3:	Not well</fullName>
            </value>
            <value>
                <fullName>4:	Not at all</fullName>
            </value>
            <value>
                <fullName>9:	Not stated/inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>