force-app/main/default/objects/Client__c/fields/slk__c.field-meta.xml
<CustomField>
    <fullName>slk__c</fullName>
    <description>A key that enables two or more records belonging to the same individual to be brought together.</description>
    <label>Statistical Linkage Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>